# docs/swagger.yaml
@@ -81,8 +81,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/dto.UserRegisterResponse'
         "400":
